fixed ticker overflow

--- a/WFHResourcesApp/src/app/wfh-navigation/wfh-navigation.component.css
+++ b/WFHResourcesApp/src/app/wfh-navigation/wfh-navigation.component.css
@@ -68,7 +68,7 @@
 
 .ticker-wrap {
   top: 0;
-  width: 100%;
+
   overflow: hidden;
   padding-left: 100%;
   box-sizing: content-box;
